; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin.c_cell_release_no_holder.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin.c_cell_release_no_holder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pool = type { i32 }
%struct.dm_bio_prison_cell = type { i32 }
%struct.bio_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pool*, %struct.dm_bio_prison_cell*, %struct.bio_list*)* @cell_release_no_holder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cell_release_no_holder(%struct.pool* %0, %struct.dm_bio_prison_cell* %1, %struct.bio_list* %2) #0 {
  %4 = alloca %struct.pool*, align 8
  %5 = alloca %struct.dm_bio_prison_cell*, align 8
  %6 = alloca %struct.bio_list*, align 8
  store %struct.pool* %0, %struct.pool** %4, align 8
  store %struct.dm_bio_prison_cell* %1, %struct.dm_bio_prison_cell** %5, align 8
  store %struct.bio_list* %2, %struct.bio_list** %6, align 8
  %7 = load %struct.pool*, %struct.pool** %4, align 8
  %8 = getelementptr inbounds %struct.pool, %struct.pool* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.dm_bio_prison_cell*, %struct.dm_bio_prison_cell** %5, align 8
  %11 = load %struct.bio_list*, %struct.bio_list** %6, align 8
  %12 = call i32 @dm_cell_release_no_holder(i32 %9, %struct.dm_bio_prison_cell* %10, %struct.bio_list* %11)
  %13 = load %struct.pool*, %struct.pool** %4, align 8
  %14 = getelementptr inbounds %struct.pool, %struct.pool* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.dm_bio_prison_cell*, %struct.dm_bio_prison_cell** %5, align 8
  %17 = call i32 @dm_bio_prison_free_cell(i32 %15, %struct.dm_bio_prison_cell* %16)
  ret void
}

declare dso_local i32 @dm_cell_release_no_holder(i32, %struct.dm_bio_prison_cell*, %struct.bio_list*) #1

declare dso_local i32 @dm_bio_prison_free_cell(i32, %struct.dm_bio_prison_cell*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
